--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,7 @@
          "matches": [
             "<all_urls>"
          ],
-         "run_at": "document_end"
+         "run_at": "document_idle"
       }
    ]
 }
