--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,8 @@
 {
    "manifest_version": 3,
    "name": "Jira, quality of life extension",
-   "version": "1.01",
+   "description": "Jira Datacenter (tested with Jira 9.5.1) is supported, Jira Cloud is not.",
+   "version": "1.02",
    "icons": {
       "16": "images/icon-16.png",
       "32": "images/icon-32.png",
